--- a/workflows/ai-agent.yml
+++ b/workflows/ai-agent.yml
@@ -108,7 +108,7 @@ jobs:
           AGENT_INSTRUCTIONS=$(cat "$CLAUDE_CODE_CONFIG_DIR/agents/common/code-implementer.json" 2>/dev/null || echo "{}")
 
           # Build the API request
-          PROMPT=$(cat <<EOF
+          read -r -d '' PROMPT << EOF
           Issue: $ISSUE_TITLE
 
           Description:
@@ -118,13 +118,14 @@ jobs:
 
           IMPORTANT: You must respond with EXACT file contents in this format:
 
-          ```file:filename.ext
-          <exact file content here>
-          ```
+          Use this format for each file:
+          FILE: path/to/filename.ext
+          CONTENT:
+          exact file content here on multiple lines
+          END_FILE
 
-          For multiple files, use multiple blocks. Do NOT include markdown formatting inside file blocks.
+          For multiple files, repeat this block.
           EOF
-          )
 
           # Call Anthropic API
           RESPONSE=$(curl -s -X POST "$ANTHROPIC_BASE_URL/v1/messages" \
@@ -158,8 +159,8 @@ jobs:
               response_json = json.loads(response_text)
               content = response_json.get("content", [{}])[0].get("text", "")
 
-              # Parse file blocks: ```file:path\ncontent\n```
-              file_pattern = r'```file:(.+?)\n(.*?)```'
+              # Parse file blocks: FILE: path\nCONTENT:\n...END_FILE
+              file_pattern = r'FILE:\s*(.+?)\nCONTENT:\n(.*?)END_FILE'
               matches = re.findall(file_pattern, content, re.DOTALL)
 
               for filepath, file_content in matches:
@@ -178,7 +179,7 @@ jobs:
 
               if not matches:
                   print("No file blocks found in response")
-                  print(f"Content preview: {content[:500]}")
+                  print(f"Content preview: {content[:1000]}")
 
           except Exception as e:
               print(f"Error parsing response: {e}")
